# detours-to-the-rescue

./: .clang-format  .containerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.Containerfile  doxyfile.ini  flake.nix  taskfile.yaml
.gitlab/issue_templates/: Crash Report.md
common/: CMakeLists.txt  dttr.jsonc
common/include/: dttr_config.h  dttr_crashdump.h  dttr_errors.h  dttr_imgui.h  dttr_interop.h  dttr_iso.h  dttr_sdl.h
common/src/: crashdump.c  errors.c  imgui_dialog.c  imgui_error_ui.c  path.c  sdl.c
common/src/config/: config_internal.h  defaults.c  io.c  parse.c  schema.c
common/src/iso/: iso.c
components/example/: CMakeLists.txt  example_component.c  flake.nix  taskfile.yaml
components/include/: dttr_components.h  dttr_interop.h
cross/: i686-w64-mingw32.cmake
loader/: CMakeLists.txt
loader/asm/: dttr_sidecar_shellcode.asm
loader/include/: dttr_bootstrap.h  dttr_loader.h  dttr_loader_paths.h  dttr_loader_ui.h
loader/src/: browse.c  compat.c  compat_shims_overrides.c  load.c  main.c  nt_process.c  paths.c  watchdog.c
loader/src/launcher/: browse.c  launcher.c  load.c  nt_process.c  paths.c  ui.c  ui_logic.c  watchdog.c
modules/common/: CMakeLists.txt  dttr.jsonc
modules/common/include/: dttr_config.h  dttr_crashdump.h  dttr_errors.h  dttr_imgui.h  dttr_log.h  dttr_path.h
modules/common/src/: crashdump.c  errors.c  imgui_dialog.c  imgui_error_ui.c  log.c  path.c  sdl.c
modules/common/src/config/: config_internal.h  defaults.c  io.c
modules/common/src/iso/: iso.c
modules/loader/: CMakeLists.txt
modules/loader/asm/: dttr_sidecar_shellcode.asm
modules/loader/include/: dttr_loader_ui.h
modules/loader/src/: main.c
modules/loader/src/launcher/: browse.c  launcher.c  load.c  nt_process.c  paths.c  ui.c  ui_logic.c  watchdog.c
modules/sidecar/: CMakeLists.txt
modules/sidecar/include/: dttr_hooks.h  dttr_hooks_audio.h  dttr_hooks_graphics.h  dttr_interop_pcdogs.h  dttr_sidecar.h
modules/sidecar/shaders/opengl/: basic.vert.glsl
modules/sidecar/shaders/sdl3gpu/: basic.frag.glsl
modules/sidecar/src/: entrypoint.c  game_api_private.h  game_data.c
modules/sidecar/src/audio/: hooks.c  mss_sample.c  mss_stream.c  mss_track.c  mss_wave.c
modules/sidecar/src/components/: components.c
modules/sidecar/src/game/: hook_cleanup_level_assets.c  hook_crt_open_file.c  hook_resolve_pcdogs_path.c
modules/sidecar/src/graphics/: backend_opengl.c  backend_opengl_private.h  backend_sdl3gpu.c  backend_sdl3gpu_pipelines.c  backend_sdl3gpu_private.h  com_direct3d7.c  com_directdrawsurface7.c  graphics.c  graphics_com_private.h  hooks.c  imgui_overlay.c  util.c
modules/sidecar/src/inputs/: hook_getasynckeystate.c
modules/sidecar/src/movies/: movies.c
packaging/stubs/: manifest.txt
scripts/: build-asm.sh  build-compat.sh  build-opengl-shaders.sh  build-shaders.sh  container-build.sh  generate-support-stubs.sh  stage-build-layout.sh
sdk/components/include/: dttr_components.h
sidecar/: CMakeLists.txt  dttr.jsonc
sidecar/include/: dttr_hooks.h  dttr_hooks_audio.h  dttr_hooks_game.h  dttr_hooks_graphics.h  dttr_hooks_inputs.h  dttr_hooks_movies.h  dttr_hooks_other.h  dttr_interop_pcdogs.h  dttr_sidecar.h  game_api_internal.h  hook_registry_internal.h
sidecar/shaders/: basic.frag.glsl  basic.vert.glsl  buf2tex.comp.glsl
sidecar/shaders/opengl/: basic.frag.glsl  basic.vert.glsl
sidecar/shaders/sdl3gpu/: basic.frag.glsl  basic.vert.glsl  buf2tex.comp.glsl
sidecar/src/: entrypoint.c  game_api.c  game_data.c  game_data_private.h  hook_registry.c  hook_registry_private.h  impl.c
sidecar/src/audio/: hooks.c  mss_core.c  mss_internal.h  mss_private.h  mss_sample.c  mss_sdl.c  mss_stream.c  mss_track.c  mss_wave.c
sidecar/src/components/: components.c  components_internal.h  components_private.h
sidecar/src/config/: config_internal.h  defaults.c  io.c  parse.c  schema.c
sidecar/src/crt/: crt.c
sidecar/src/game/: game_data_source.c  game_data_source_private.h  hook_crt_open_file.c  hook_resolve_pcdogs_path.c  hooks.c
sidecar/src/graphics/: backend_opengl.c  backend_opengl_internal.h  backend_sdl3gpu.c  backend_sdl3gpu_internal.h  backend_sdl3gpu_pipelines.c  backend_sdl3gpu_resources.c  com_direct3d7.c  com_direct3ddevice7.c  com_direct3dtexture2.c  com_directdraw7.c  com_directdrawsurface7.c  frame.c  graphics.c  graphics_com_internal.h  graphics_com_private.h  graphics_internal.h  graphics_private.h  hooks.c  imgui_overlay.c  imgui_overlay_internal.h  imgui_overlay_private.h  overlay_components.c  pipelines.c  resources.c  util.c
sidecar/src/inputs/: hook_dinput_poll.c  hook_getasynckeystate.c  inputs.c
sidecar/src/movies/: movies.c
sidecar/src/other/: hook_cleanup_level_assets.c  hook_crt.c  hook_crt_open_file.c  hook_resolve_pcdogs_path.c  hooks.c
sidecar/src/platform/: hook_ddraw.c  hook_dinput.c  hook_gdi32.c  hook_kernel32.c  hook_mss32.c  hook_user32.c  hook_winmm.c  hook_winplay.c  hook_winstr.c  imports.c  imports_internal.h
stubs/: manifest.txt
watchdog/: CMakeLists.txt
watchdog/src/: watchdog.c
